--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Charitize - Charity Organization Website Template</title>
+    <title>Emmaneul K. Ngwainmbi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -46,7 +46,7 @@
         <div class="row align-items-center h-100">
             <div class="col-lg-4 text-center text-lg-start">
                 <a href="index.html">
-                    <h1 class="display-5 text-primary m-0">Charitize</h1>
+                    <h1 class="display-5 text-primary m-0">Emmaneul K. Ngwainmbi</h1>
                 </a>
             </div>
             <div class="col-lg-8 d-none d-lg-block">
@@ -137,9 +137,12 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="carousel-text">
-                            <h1 class="display-1 text-uppercase mb-3">Together for a Better Tomorrow</h1>
-                            <p class="fs-5 mb-5">We believe in creating opportunities and empowering communities through
-                                education, healthcare, and sustainable development.</p>
+                            <h1 class="display-1 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h1>
+                            <p class="fs-5 mb-5">Prolific Author</p>
+                            <p class="fs-5 mb-5">UNESCO Fellow</p>
+                            <p class="fs-5 mb-5">Seasoned Educator</p>
+                            <p class="fs-5 mb-5">Engaging and Enlightening Speaker</p>
+                            <p class="fs-5 mb-5">Distinguished Keynote Speaker Recipient</p>
                             <div class="d-flex">
                                 <a class="btn btn-primary py-3 px-4 me-3" href="#!">Donate Now</a>
                                 <a class="btn btn-secondary py-3 px-4" href="#!">Join Us Now</a>
