--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row align-items-center h-100">
             <div class="col-lg-4 text-center text-lg-start">
                 <a href="index.html">
-                    <h1 class="display-5 text-primary m-0">Emmaneul K. Ngwainmbi</h1>
+                    <h3 class="display-5 text-primary m-0">Emmaneul K. Ngwainmbi</h3>
                 </a>
             </div>
             <div class="col-lg-8 d-none d-lg-block">
@@ -138,6 +138,7 @@
                     <div class="col-lg-6">
                         <div class="carousel-text">
                             <h4 class="display-1 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
+                            <h3 class="ms-5 mb-0">Prolific Author</h3>
                             <p class="fs-5 mb-5">Prolific Author</p>
                             <p class="fs-5 mb-5">UNESCO Fellow</p>
                             <p class="fs-5 mb-5">Seasoned Educator</p>
