--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="carousel-text">
-                            <h4 class="display-1 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
+                            <h4 class="display-5 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
                             <h3 class="ms-5 mb-0">Prolific Author</h3>
+                            <h3 class="ms-5 mb-0">UNESCO FELLOW</h3>
+                            <h3 class="ms-5 mb-0">Seasoned Educator</h3>
                             <p class="fs-5 mb-5">Prolific Author</p>
                             <p class="fs-5 mb-5">UNESCO Fellow</p>
                             <p class="fs-5 mb-5">Seasoned Educator</p>
