--- a/index.html
+++ b/index.html
@@ -138,14 +138,11 @@
                     <div class="col-lg-6">
                         <div class="carousel-text">
                             <h4 class="display-5 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
-                            <h3 class="ms-5 mb-0">Prolific Author</h3>
-                            <h3 class="ms-5 mb-0">UNESCO FELLOW</h3>
-                            <h3 class="ms-5 mb-0">Seasoned Educator</h3>
-                            <p class="fs-5 mb-5">Prolific Author</p>
-                            <p class="fs-5 mb-5">UNESCO Fellow</p>
-                            <p class="fs-5 mb-5">Seasoned Educator</p>
-                            <p class="fs-5 mb-5">Engaging and Enlightening Speaker</p>
-                            <p class="fs-5 mb-5">Distinguished Keynote Speaker Recipient</p>
+                            <h4 class="ms-5 mb-0">Prolific Author</h4>
+                            <h4 class="ms-5 mb-0">UNESCO Fellow</h4>
+                            <h4 class="ms-5 mb-0">Seasoned Educator</h4>
+                            <h4 class="ms-5 mb-0">Engaging and Enlightening Speaker</h4>
+                            <h4 class="ms-5 mb-0">Distinguished Keynote Speaker Recipient</h4>
                             <div class="d-flex">
                                 <a class="btn btn-primary py-3 px-4 me-3" href="#!">Donate Now</a>
                                 <a class="btn btn-secondary py-3 px-4" href="#!">Join Us Now</a>
