--- a/index.html
+++ b/index.html
@@ -104,16 +104,15 @@
                     <div class="navbar-nav me-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <!--<a href="service.html" class="nav-item nav-link">Service</a>--->
                         <a href="donation.html" class="nav-item nav-link">Donation</a>
                         <div class="nav-item dropdown">
-                            <a href="#!" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#!" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Work</a>
                             <div class="dropdown-menu bg-light m-0">
                                 <a href="event.html" class="dropdown-item">Event</a>
                                 <a href="feature.html" class="dropdown-item">Feature</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -192,13 +191,13 @@
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
                         </button>
-                        <h3 class="ms-5 mb-0">Together, we can build a world where everyone has the chance to thrive.
+                        <h3 class="ms-5 mb-0">Words have power; today, let’s use them to shift the room.
                         </h3>
                     </div>
                 </div>
                 <div class="d-none d-lg-block col-lg-1">
                     <div class="h-100 w-100 bg-secondary d-flex align-items-center justify-content-center">
-                        <span class="text-white" style="transform: rotate(-90deg);">Scroll Down</span>
+                        <span class="text-white" style="transform: rotate(-90deg);">Subscribe Now</span>
                     </div>
                 </div>
             </div>
@@ -238,7 +237,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
+                    <p class="section-title bg-white text-start text-primary pe-3">About Me</p>
                     <h1 class="display-6 mb-4 wow fadeIn" data-wow-delay="0.2s">Join Hands, Change the World</h1>
                     <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">Every hand extended in kindness brings us closer to
                         a world free from suffering. Be part of a global movement dedicated to building a future where
