--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                             <h4 class="ms-5 mb-0">Distinguished Keynote Speaker Recipient</h4>
                                 <br>
                             <div class="d-flex">
+                            <div class="d-flex mt-4">
                                 <a class="btn btn-primary py-3 px-4 me-3" href="#!">Donate Now</a>
                                 <a class="btn btn-secondary py-3 px-4" href="#!">Join Us Now</a>
                             </div>
