--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="carousel-text">
-                            <h4 class="display-5 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
+                            <h4 class="display-5 text-uppercase mb-2">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h4>
                             <h4 class="ms-5 mb-0">Prolific Author</h4>
                             <h4 class="ms-5 mb-0">UNESCO Fellow</h4>
                             <h4 class="ms-5 mb-0">Seasoned Educator</h4>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="carousel-img">
-                            <img class="w-100" src="img/carousel.jpg" alt="Image">
+                            <img class="w-100" src="img/carousel1.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
