--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="carousel-img">
-                            <img class="w-100" src="img/carousel1.jpg" alt="Image">
+                            <img class="w-100" src="img/emman.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
