--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Charitize - Charity Organization Website Template</title>
+    <title>Emmanuel Ngwainmbi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -46,7 +46,7 @@
         <div class="row align-items-center h-100">
             <div class="col-lg-4 text-center text-lg-start">
                 <a href="index.html">
-                    <h1 class="display-5 text-primary m-0">Charitize</h1>
+                    <h1 class="display-5 text-primary m-0">Emmanuel K. Ngwainmbi</h1>
                 </a>
             </div>
             <div class="col-lg-8 d-none d-lg-block">
@@ -58,7 +58,7 @@
                             </div>
                             <div class="ms-2">
                                 <h6 class="text-primary mb-0">Call Us</h6>
-                                <span class="text-white">+012 345 6789</span>
+                                <span class="text-white">+1 980 339 9467</span>
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                             </div>
                             <div class="ms-2">
                                 <h6 class="text-primary mb-0">Mail Us</h6>
-                                <span class="text-white">info@domain.com</span>
+                                <span class="text-white">raiapoorv86@gmail.com</span>
                             </div>
                         </div>
                     </div>
@@ -137,12 +137,12 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="carousel-text">
-                            <h1 class="display-1 text-uppercase mb-3">Together for a Better Tomorrow</h1>
-                            <p class="fs-5 mb-5">We believe in creating opportunities and empowering communities through
-                                education, healthcare, and sustainable development.</p>
+                            <h1 class="display-1 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h1>
+                            <p class="fs-5 mb-5">Prolific Author.</p>
+                            <p class="fs-5 mb-5">UNESCO Fellow</p>
                             <div class="d-flex">
-                                <a class="btn btn-primary py-3 px-4 me-3" href="#!">Donate Now</a>
-                                <a class="btn btn-secondary py-3 px-4" href="#!">Join Us Now</a>
+                                <a class="btn btn-primary py-3 px-4 me-3" href="#!">READ MORE</a>
+                                <a class="btn btn-secondary py-3 px-4" href="#!">FOLLOW ME</a>
                             </div>
                         </div>
                     </div>
