--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row align-items-center h-100">
             <div class="col-lg-4 text-center text-lg-start">
                 <a href="index.html">
-                    <h1 class="display-5 text-primary m-0">Emmanuel K. Ngwainmbi</h1>
+                    <h1 class="display-6 text-primary m-0">Emmanuel K. Ngwainmbi</h1>
                 </a>
             </div>
             <div class="col-lg-8 d-none d-lg-block">
@@ -137,9 +137,11 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="carousel-text">
-                            <h1 class="display-1 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h1>
-                            <p class="fs-5 mb-5">Prolific Author.</p>
-                            <p class="fs-5 mb-5">UNESCO Fellow</p>
+                            <h1 class="display-4 text-uppercase mb-3">NOVELIST, POET, JOURNALIST, MOTIVATIONAL SPEAKER</h1>
+                            <ul class="mb-5">
+                                <li class="fs-5">Prolific Author</li>
+                                <li class="fs-5">UNESCO Fellow</li>
+                            </ul>
                             <div class="d-flex">
                                 <a class="btn btn-primary py-3 px-4 me-3" href="#!">READ MORE</a>
                                 <a class="btn btn-secondary py-3 px-4" href="#!">FOLLOW ME</a>
