--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
                             <ul class="mb-5">
                                 <li class="fs-5">Prolific Author</li>
                                 <li class="fs-5">UNESCO Fellow</li>
+                                <li class="fs-5">Seasoned Educator</li>
+                                <li class="fs-5">Engaging & Enlightening Speaker</li>
+                                <li class="fs-5">Distinguished Keynote Speaker Recipient</li>
+                                <li class="fs-5">Lifetime Fellow at International Society for Development & Sustainablity(ISDS).</li>
+                                <li class="fs-5">Published Over 25 Books</li>
+                                <li class="fs-5">Fellow International Association For Intercultural Communication Studies(IAICS).</li>
                             </ul>
                             <div class="d-flex">
                                 <a class="btn btn-primary py-3 px-4 me-3" href="#!">READ MORE</a>
