--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="d-none d-lg-block col-lg-1">
                     <div class="h-100 w-100 bg-secondary d-flex align-items-center justify-content-center">
-                        <span class="text-white" style="transform: rotate(-90deg);">Scroll Down</span>
+                        <span class="text-white" style="transform: rotate(-360deg);">Know More</span>
                     </div>
                 </div>
             </div>
@@ -242,30 +242,23 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
-                    <h1 class="display-6 mb-4 wow fadeIn" data-wow-delay="0.2s">Join Hands, Change the World</h1>
-                    <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">Every hand extended in kindness brings us closer to
-                        a world free from suffering. Be part of a global movement dedicated to building a future where
-                        equality and compassion thrive.</p>
+                    <p class="section-title bg-white text-start text-primary pe-3">About Me</p>
+                    <h1 class="display-6 mb-4 wow fadeIn" data-wow-delay="0.2s">Write to enlighten, not to impress.</h1>
+                    <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">I have 40years Experience Motivating Groups, Speaking Publicly, Writing and Publishing books and articles, Developing projects and programs and Editing Documents in English and French.</p>
                     <div class="row g-4 pt-2">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                             <div class="h-100">
-                                <h3>Our Mission</h3>
-                                <p>Our mission is to uplift underprivileged communities by providing resources,
-                                    education, and tools for growth.</p>
-                                <p class="text-dark"><i class="fa fa-check text-primary me-2"></i>No one should go to
-                                    bed hungry.</p>
-                                <p class="text-dark"><i class="fa fa-check text-primary me-2"></i>We spread kindness and
-                                    support.</p>
-                                <p class="text-dark mb-0"><i class="fa fa-check text-primary me-2"></i>We can change
-                                    someone’s life.</p>
+                                <h3>Previous Engagements</h3>
+                                <p></p>
+                                <p class="text-dark"><i class="fa fa-check text-primary me-2"></i>US Naval Base, Virginia</p>
+                                <p class="text-dark"><i class="fa fa-check text-primary me-2"></i>Kirchheim bei München, Heimstettner Straße 3, 85551 Kirchheimbei München Deutschland (Germany).</p>
+                                <p class="text-dark mb-0"><i class="fa fa-check text-primary me-2"></i>Family Christian Association of America, Jackson, Mississippi Elizabeth.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 bg-primary p-4 text-center">
-                                <p class="fs-5 text-dark">Through your donations, we spread kindness and support to
-                                    children and families.</p>
-                                <a class="btn btn-secondary py-2 px-4" href="#!">Donate Now</a>
+                                <p class="fs-5 text-dark">Four decades of service have taught me this: when you speak to uplift people, your voice becomes a bridge between who they are and who they can become.</p>
+                                <a class="btn btn-secondary py-2 px-4" href="#!">Subscribe</a>
                             </div>
                         </div>
                     </div>
