--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="col-lg-6">
                     <p class="section-title bg-white text-start text-primary pe-3">About Me</p>
                     <h1 class="display-6 mb-4 wow fadeIn" data-wow-delay="0.2s">Write to enlighten, not to impress.</h1>
-                    <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">I have 40years Experience Motivating Groups, Speaking Publicly, Writing and Publishing books and articles, Developing projects and programs and Editing Documents in English and French.</p>
+                    <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">I have 40 Years Experience Motivating Groups, Speaking Publicly, Writing and Publishing Books and Articles, Developing Projects and Programs and Editing Documents in English and French.</p>
                     <div class="row g-4 pt-2">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                             <div class="h-100">
